addtions to the index and style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!--Grid Sys-->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <!--Animation-->
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">-->
     <!--Personal Styling-->
@@ -16,7 +16,6 @@
 
   <body>
 
-    <!-- Add your site or application content here -->
     <div class="container-fluid" id=intro>
         <div class="nav-bar">
             <div class="row">
@@ -34,20 +33,35 @@
         </div>
     </div>
 
-    <div class="container-fluid" id=main>
-            <div class="grey-back">
-                
-                <div>
-                    <h1>
-                        Monthly Budget Calculator
-                    </h1>
-                </div>
+    <div class="container-fluid grey-back" id=main>
+        <div class="row">
+            <div class="col-md-4">
 
-                <div>
-                    <p>
-                    </p>
+                <div class="instruction-container">
+                    <div>
+                        <h1>Monthly Budget Calculator</h1>
+                    </div>
+
+                    <div>
+                        <p>
+                            Building a good budget is the key to managing your money. <br />This free budget calculator 
+                            will give you a clear view of your monthly <br />finances and help you find
+                            places to change your budget to make the most of your income.*
+                        </p>
+                    </div>
                 </div>
             </div>
+
+                <!---->
+
+            <div class="col-md-8">
+                <div>
+                    <div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>  
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>
